EDIT: $98 추가 LOCATION_NONE 상태 추가
EDIT: TeamLocation Enum에서 NONE(LOCATION_NONE, 상관없음) 필드 추가
location이 null로 들어가 있을 시Thymeleaf에서 문제 발생함
원인으로은 상관없음을 선택할 시 기존에는 null이 들어가나
thymeleaf 조회 및 list 출력 부분에서 th:if 가 location를 obj로
사용하는데 이때  null가드를 사용하지 않기 때문에 문제가 발생함
코드를 전체 수정하기 보다는 상태 추가 방식을 선택함

--- a/src/main/resources/templates/create_team.html
+++ b/src/main/resources/templates/create_team.html
@@ -32,6 +32,7 @@
                     <span th:if="${team.location.toString().equals('GAEPO')}">개포</span>
                     <span th:if="${team.location.toString().equals('SEOCHO')}">서초</span>
                     <span th:if="${team.location.toString().equals('ONLINE')}">온라인</span>
+                    <span th:if="${team.location.toString().equals('NONE')}">상관없음</span>
                 </td>
                 <td th:text="${team.maxMemberCount} == 0 ? '상관 없음' : ${team.maxMemberCount}">3</td>
                 <td>
