--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -43,6 +43,7 @@
                     <span th:if="${team.location.toString().equals('GAEPO')}">개포</span>
                     <span th:if="${team.location.toString().equals('SEOCHO')}">서초</span>
                     <span th:if="${team.location.toString().equals('ONLINE')}">온라인</span>
+                    <span th:if="${team.location.toString().equals('NONE')}">상관없음</span>
                 </td>
                 <td th:text="${#temporals.format(team.startTime, 'dd/MM')}">날짜</td>
                 <td>
@@ -55,9 +56,12 @@
                 <td th:text="${team.maxMemberCount - team.currentMemberCount}">1</td>
                 <td>
                     <span th:if="${#strings.contains(team.getNicknameByMentor(),'empty')}">미지정</span>
-                    <span th:unless="${#strings.contains(team.getNicknameByMentor(),'empty')}" th:text="${team.getNicknameByMentor()}">멘토</span>
+                    <span th:unless="${#strings.contains(team.getNicknameByMentor(),'empty')}"
+                          th:text="${team.getNicknameByMentor()}">멘토</span>
                 </td>
-                <td><button type="button" class="btn btn-primary">참여하기</button></td>
+                <td>
+                    <button type="button" class="btn btn-primary">참여하기</button>
+                </td>
             </tr>
             </tbody>
         </table>
